# simclr

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  environment.yaml  requirements.txt  setup.cfg
.github/workflows/: main.yaml
notebooks/: training_sdk.ipynb
src/: search_hyperparams.py  task.py
src/dataloader/: data_loader.py
src/model/: net.py
src/trainer/: evaluate.py  train.py
src/utils/: utils.py
tests/: test_metrics.py
