[metadata]
name = SimCLR
version = 0.0.1
author = Karan Rampal
author_email = karanrampal87@gmail.com
description = Self-supervised contrastive learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karanrampal/simclr
project_urls =
    Bug Tracker = https://github.com/karanrampal/simclr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    tensorboard

[options.packages.find]
where = src